// SPDX-License-Identifier: Apache-2.0
//
// This file is unmodified from its original version developed by Acryl Data, Inc.,
// and is now included as part of a repository maintained by the National Digital Twin Programme.
// All support, maintenance and further development of this code is now the responsibility
// of the National Digital Twin Programme.

syntax = "proto3";
package extended_protobuf;

import "google/protobuf/wrappers.proto";


message UserMsg {
  message UserInfo {
    string nickname = 1; // nickname info
    string profile_url = 2; // profile url info
  }

  message AddressMsg {
    google.protobuf.StringValue zipcode = 1;  // Zip code, alphanumeric
    google.protobuf.StringValue city = 2;  // City corresponding to zip code
    google.protobuf.StringValue country = 3;  // County
  }

  string id = 1; // user id
  string name = 2; // user name
  UserInfo user_info = 3; // user info

  // address
  AddressMsg address = 4;
}